--- a/public/css/_all-skins.css
+++ b/public/css/_all-skins.css
@@ -3,7 +3,7 @@
  * ----------
  */
 .skin-blue .main-header .navbar {
-  background-color: #3c8dbc;
+  background-color:#3b8ab8;
 }
 .skin-blue .main-header .navbar .nav > li > a {
   color: #ffffff;
@@ -145,7 +145,7 @@
  * ----------
  */
 .skin-blue-light .main-header .navbar {
-  background-color: #3c8dbc;
+  background-color:#3b8ab8;
 }
 .skin-blue-light .main-header .navbar .nav > li > a {
   color: #ffffff;
